--- a/app/index.html
+++ b/app/index.html
@@ -1,39 +1,84 @@
-<!DOCTYPE html>
-<!-- Notice the ng-app Angular directive. This tells Angular where the application starts and also
-which module to associate the app with. In app.js we create the "dinnerPlanner" module. -->
-<html lang="en" ng-app="dinnerPlanner">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dinner planner</title>
+<!doctype html>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <!-- jQuery -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <!-- Bootstrap JavaScript, needed if you want for instance tabs, models, popovers etc. -->
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- Angular JavaScript including routing and resource modules  -->
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/angular-resource/angular-resource.js"></script>
+<html lang="en" ng-app="myApp"> 
+
+<head>
+  <meta charset="UTF-8">
+  <title>Angular Registration</title>
+  
+  <!-- special options -->
+  <meta name="viewport" content="width=device-width, user-scalable=no">
+  
+  <!-- google fonts -->
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,100,700,900' rel='stylesheet' type='text/css'>
+  
+  <!-- styles -->
+  <link rel="stylesheet" href="css/style.css">
+
+  <!-- angular lib -->
+  <script src="js/lib/angular/angular.min.js"></script>
+  <script src="js/lib/angular/angular-route.min.js"></script>
+  <script src="js/lib/angular/angular-animate.min.js"></script>
+
+  <!-- firebase scriptes -->
+  <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+  <script src="https://cdn.firebase.com/libs/angularfire/1.1.4/angularfire.min.js"></script>
+
+  <!-- app files -->
+  <script src="js/app.js"></script>
+  <script src="js/services/authentication.js"></script>
+  <script src="js/controllers/registration.js"></script>
+  <script src="js/controllers/success.js"></script>
+</head>
+
+
+<body>
+<header>
+  <!-- here we include the nav.html w/ng-include directive -->
+  <nav class="cf" ng-include="'views/nav.html'" ng-controller="RegistrationController">
     
-    <!-- The application JavaScript code -->
-    <script src="js/app.js"></script>
-    <script src="js/dinnerService.js"></script>
-    <script src="js/searchCtrl.js"></script>
-    <script src="js/dinnerCtrl.js"></script>
-    <script src="js/dishCtrl.js"></script>
+  </nav>
+</header>
 
-  </head>
-  <body>
-    <!-- Here in index.html you should put only the layout that is shared among all the screens (e.g. header
-    ,footer, etc.). The rest of the view specific layout will go into the html partials (check partials folder) -->
+  <div class="page">
+      
+      <div class="userinfo" ng-show="currentUser" ng-controller="RegistrationController">
+        <span class="userinfo">
+          Hi, {{currentUser.firstname}}
+        </span>
+        <!-- <a ng-href="#/login" ng-click="logout()">
+          Logout
+        </a> -->
+      </div>
 
-    <!-- ng-view Angular directive is where the partials will be loaded. app.js configures the $routingProvider
-    where you specify which partial should be loaded when. -->
-    <div ng-view></div>
+      <main class="cf" ng-view>
 
-  </body>
-</html>
+
+        <!-- views go here -->
+
+
+
+      </main> <!-- app view container -->
+
+  </div> <!-- page -->
+
+</body>
+</html> <!-- html doc is/creates the app -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
