--- a/app/index.html
+++ b/app/index.html
@@ -4,17 +4,23 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Angular Registration</title>
+  <title>AlbumGram</title>
   
   <!-- special options -->
   <meta name="viewport" content="width=device-width, user-scalable=no">
+  <meta http-equiv="Access-Control-Allow-Origin" content="*">
   
   <!-- google fonts -->
   <link href='https://fonts.googleapis.com/css?family=Lato:400,100,700,900' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600' rel='stylesheet' type='text/css'>  
   
   <!-- styles -->
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.4/angular-material.css'>
 
+  
   <!-- angular lib -->
   <script src="js/lib/angular/angular.min.js"></script>
   <script src="js/lib/angular/angular-route.min.js"></script>
@@ -25,32 +31,38 @@
   <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
   <script src="https://cdn.firebase.com/libs/angularfire/1.1.4/angularfire.min.js"></script>
 
+  <!-- scripts -->
+  
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
+	<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-114/assets-cache.js'></script>
+	<script src='https://cdn.rawgit.com/sroze/ngInfiniteScroll/master/build/ng-infinite-scroll.js'></script>
+	<!-- <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script> -->
+  
   <!-- app files -->
   <script src="js/app.js"></script>
   <script src="js/services/authentication.js"></script>
   <script src="js/services/albumService.js"></script>
+  <script src='js/controllers/angulargrid.js'></script>
   <script src="js/controllers/registration.js"></script>
   <script src="js/controllers/success.js"></script>
   <script src="js/controllers/imageCtrl.js"></script>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-  <script src="js/index.js"></script>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,600' rel='stylesheet' type='text/css'>  
+  <!-- <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script> -->
+  
 </head>
 
 
 <body>
 <header>
-  <!-- here we include the nav.html w/ng-include directive -->
-  <nav class="cf" ng-include="'views/nav.html'" ng-controller="RegistrationController">
-  <h1>Flickr Images</h1>
+
+  <div ng-include="'views/nav.html'" ng-controller="RegistrationController">
   </nav>
 </header>
-
+<br/>
   <div class="page">
-      
       <div class="userinfo" ng-show="currentUser" ng-controller="RegistrationController">
         <span class="userinfo">
-          Hi, {{currentUser.firstname}}
+          Hi, {{currentUser.firstname}}!
         </span>
         <!-- <a ng-href="#/login" ng-click="logout()">
           Logout
@@ -58,23 +70,11 @@
       </div>
 
       <main class="cf" ng-view>
-
-
         <!-- views go here -->
-
-
-
-      </main> <!-- app view container -->
-
-  </div> <!-- page -->
-
-
-<!--     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-        <script src="js/index.js"></script> -->
-
-
+      </main>
+  </div>
 </body>
-</html> <!-- html doc is/creates the app -->
+</html>
 
 
 
